--- a/client/src/component/css/Header.css
+++ b/client/src/component/css/Header.css
@@ -1,26 +1,27 @@
-.Header {
-    width: 100%;
-    height: 8vh;
-    background-color: #DCEDC8;
+#header {
+  height: 80px;
+  background-color: #C4E0A5;
 }
 
-.logo {
-    height: 7vh;
+#logo {
+  width: 450px;
+  height: 80px;
+  cursor: pointer;
 }
 
 .headerButton {
-    width: 10%;
-    height: 8vh;
-    float: right;
-    line-height: 8vh;
-    text-decoration: none;
-    color: #333333;
-    font-size: 1.5em;
-    text-align: center;
+  text-align: center;
+  margin-right: 10px;
+  font-size: 1.8rem;
+}
+
+.headerButtonText {
+  font-weight: 600;
+  color: #404040;
 }
 
 .userButton {
-    width: 5%;
-    height: 8vh;
-    float: right;
+  width: 5%;
+  height: 8vh;
+  float: right;
 }
