--- a/client/src/component/css/Planner/ScheduleEditor.css
+++ b/client/src/component/css/Planner/ScheduleEditor.css
@@ -1,8 +1,8 @@
 .scheduleEditor {
     position: absolute;
-    width: 38%;
-    height: calc(100vh - 80px);
-    background-color: #BABABA;
+    width: 100%;
+    height: 100%;
+    background-color: #FFFFFF;
 }
 
 .pullEditor {
