--- a/client/src/component/css/Schedule.css
+++ b/client/src/component/css/Schedule.css
@@ -24,3 +24,22 @@
     margin-right: 10px;
 }
 
+.schedule-line {
+    background-color: #BABABA;
+    width: 3px;
+    position: absolute;
+    top: 160px;
+    bottom: 160px;
+    left: 16%;
+    z-index: 1;
+}
+
+.schedule-white {
+    position: absolute;
+    top: 158px;
+    width: 80%;
+    height: 28px;
+    background-color: white;
+    z-index: 10;
+    left:10%;
+}
